# Seekr.ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SEEKR_HANDOFF_2026-06-25.md  pubspec.yaml
.github/workflows/: deploy-backend.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
backend/: Dockerfile  README.md  cloudbuild.yaml  deploy.sh  dev_tunnel.sh  pyproject.toml
backend/app/: main.py  models.py
backend/app/providers/: __init__.py  azure_openai_provider.py  mock_provider.py
backend/tests/: test_describe.py
docs/: Seekr Flutter Developer Prep.md  Seekr Round 2 Mock Practice.md  seekr_founder_conversation_prep.md  seekr_round2_coding_prep.md  seekr_round2_mock_and_practice_system.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_dev.dart  main_prod.dart  main_qa.dart  main_staging.dart
lib/controllers/: seekr_controller.dart
lib/core/: app_config.dart  theme.dart
lib/data/: device_image_source.dart  device_service.dart  phone_camera_source.dart
lib/domain/: models.dart
lib/services/: audio_queue.dart  cloud_vision_service.dart  connectivity_service.dart  live_frame_gate.dart  live_speech_policy.dart  local_vision_service.dart  tts_service.dart  vision_router.dart
lib/views/: camera_live_view.dart  home_view.dart
lib/views/widgets/: camera_preview_box.dart
test/: connectivity_service_test.dart  home_view_test.dart  live_policy_test.dart  vision_router_test.dart  widget_test.dart
web/: index.html  manifest.json
(+1 files in other folders)
